<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
	<string name="d_type">Disaster Type :</string>
	<string name="w_type">Worker Type :</string>
	<string name="message_text_hint">Enter message</string>
	<string name="rcv_message_text_hint">Message</string>
	<string name="send">Send</string>
	<string name="message">Messages</string>
	<string name="advance">Advanced</string>
	<string name="other_worker_hint">Mention here</string>
	<string name="require">Requirement</string>
	<string name="doctor_require">Number of doctors</string>
	<string name="doctor_number_text_hint">Number of doctors</string>
	<string name="ambulance_require">Number of ambulance</string>
	<string name="ambulance_number_text_hint">Number of ambulance</string>
	<string name="oxygen_require">With oxygen</string>
	<string name="medicine_require">Medicine for</string>
	<string name="medicine_other_text_hint">Mention Here</string>
	<string name="advance_ok">OK</string>
	<string name="action_new_reg">New Registration</string>
	
    <string-array name="dis_array">
        <item>Flood</item>
        <item>Cyclone</item>
    </string-array>
    
     <string-array name="worker_array">
        <item>Medical</item>
        <item>Police</item>
        <item>Rescue</item>
        <item>Others</item>
    </string-array>
    
</resources>
