<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="10dip"
      android:paddingRight="10dip" 
      android:paddingTop="10dip"
	  android:background="@drawable/bck"	   > 
	  
      <LinearLayout
          		     android:id="@+id/requirement"
          		     android:layout_width="fill_parent"
			         android:layout_height="wrap_content"
			         android:orientation="horizontal"
			         android:paddingRight="5dip" 
      				 android:paddingLeft="5dip"
      				 >
      				 	
				          		<TextView
							        android:id="@+id/require_text"
							        android:layout_width="wrap_content"
							        android:layout_height="40dip"
							        android:text="@string/require"
							        android:paddingTop="15dip"
							        android:textColor="#a27e2c" 
				         		/>    
				         		<TextView
							          android:id="@+id/blank"
							          android:layout_width="wrap_content"
							          android:layout_height="wrap_content"
							          android:paddingEnd="10dip"
							          android:paddingStart="5dip"
							          android:textColor="#a27e2c"      
				          		/>

				         		<Spinner
				         		    android:id="@+id/require_menu"
				         		    android:layout_width="wrap_content"
				         		    android:layout_height="wrap_content"
				         		    android:background="#cfb1c4" />

		</LinearLayout>
      
		<TextView
				android:id="@+id/blank1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingTop="10dip"
				android:paddingBottom="10dip"
				android:textColor="#a27e2c" 
				android:layout_below="@id/requirement"     
		/>
		
		 <LinearLayout
          		     android:id="@+id/doctor_requirement"
          		     android:layout_width="fill_parent"
			         android:layout_height="wrap_content"
			         android:orientation="horizontal"
			         android:paddingRight="5dip" 
      				 android:paddingLeft="5dip"
      				 android:layout_below="@id/blank1"
      				 >
      				 	
				          		<TextView
							        android:id="@+id/doctor_require_text"
							        android:layout_width="wrap_content"
							        android:layout_height="wrap_content"
							        android:text="@string/doctor_require"
							        android:paddingTop="15dip"
							        android:textColor="#a27e2c" 
				         		/>    
				         		<TextView
							          android:id="@+id/blank3"
							          android:layout_width="wrap_content"
							          android:layout_height="wrap_content"
							          android:paddingEnd="10dip"
							          android:paddingStart="5dip"
							          android:textColor="#a27e2c"      
				          		/>

				         		<EditText
				                    android:layout_width="fill_parent"
				                    android:layout_height="wrap_content"
				                    android:id="@+id/doctor_number_text"
				                    android:layout_alignParentLeft="true"
				                    android:autoLink="all"
				                    android:hint="@string/doctor_number_text_hint"
				                    android:lines="1"
				                    android:minLines="1"
				                    android:gravity="top|left"
				                    android:maxLines="1"
				                    android:scrollbars="none"
				                    android:inputType="phone"
				                    android:background="#ffffff"
			                    />

		</LinearLayout>
		 <LinearLayout
          		     android:id="@+id/ambulance_requirement"
          		     android:layout_width="fill_parent"
			         android:layout_height="wrap_content"
			         android:orientation="horizontal"
			         android:paddingRight="5dip" 
      				 android:paddingLeft="5dip"
      				 android:layout_below="@id/blank1"
      				 >
      				 	
				          		<TextView
							        android:id="@+id/ambulance_require_text"
							        android:layout_width="wrap_content"
							        android:layout_height="wrap_content"
							        android:text="@string/ambulance_require"
							        android:paddingTop="15dip"
							        android:textColor="#a27e2c" 
				         		/>    
				         		<TextView
							          android:id="@+id/blank4"
							          android:layout_width="wrap_content"
							          android:layout_height="wrap_content"
							          android:paddingEnd="10dip"
							          android:paddingStart="5dip"
							          android:textColor="#a27e2c"      
				          		/>

				         		<EditText
				                    android:layout_width="fill_parent"
				                    android:layout_height="wrap_content"
				                    android:id="@+id/ambulance_number_text"
				                    android:layout_alignParentLeft="true"
				                    android:autoLink="all"
				                    android:hint="@string/ambulance_number_text_hint"
				                    android:lines="1"
				                    android:minLines="1"
				                    android:gravity="top|left"
				                    android:maxLines="1"
				                    android:scrollbars="none"
				                    android:inputType="phone"
				                    android:background="#ffffff"
			                    />

		</LinearLayout>
		<TextView
				android:id="@+id/blank5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingTop="10dip"
				android:paddingBottom="10dip"
				android:textColor="#a27e2c" 
				android:layout_below="@id/ambulance_requirement"     
		/>
		<LinearLayout
          		     android:id="@+id/oxygen_requirement"
          		     android:layout_width="fill_parent"
			         android:layout_height="wrap_content"
			         android:orientation="horizontal"
			         android:paddingRight="5dip" 
      				 android:paddingLeft="5dip"
      				 android:layout_below="@id/blank5"
      				 >
      				 	
				          		<TextView
							        android:id="@+id/oxygen_require_text"
							        android:layout_width="wrap_content"
							        android:layout_height="wrap_content"
							        android:text="@string/oxygen_require"
							        android:paddingTop="15dip"
							        android:textColor="#a27e2c" 
				         		/>    
				         		<TextView
							          android:id="@+id/blank6"
							          android:layout_width="wrap_content"
							          android:layout_height="wrap_content"
							          android:paddingEnd="10dip"
							          android:paddingStart="5dip"
							          android:textColor="#a27e2c"      
				          		/>

				         		<Spinner
				         		    android:id="@+id/oxygen_require_menu"
				         		    android:layout_width="wrap_content"
				         		    android:layout_height="wrap_content"
				         		    android:background="#cfb1c4" />

		</LinearLayout>
		<LinearLayout
          		     android:id="@+id/medicine_requirement"
          		     android:layout_width="fill_parent"
			         android:layout_height="wrap_content"
			         android:orientation="horizontal"
			         android:paddingRight="5dip" 
      				 android:paddingLeft="5dip"
      				 android:layout_below="@id/blank1"
      				 >
      				 	
				          		<TextView
							        android:id="@+id/medicine_require_text"
							        android:layout_width="wrap_content"
							        android:layout_height="wrap_content"
							        android:text="@string/medicine_require"
							        android:paddingTop="15dip"
							        android:textColor="#a27e2c" 
				         		/>    
				         		<TextView
							          android:id="@+id/blank7"
							          android:layout_width="wrap_content"
							          android:layout_height="wrap_content"
							          android:paddingEnd="10dip"
							          android:paddingStart="5dip"
							          android:textColor="#a27e2c"      
				          		/>

				         		<Spinner
				         		    android:id="@+id/medicine_require_menu"
				         		    android:layout_width="wrap_content"
				         		    android:layout_height="wrap_content"
				         		    android:background="#cfb1c4" />

		</LinearLayout>
		<LinearLayout
          		     android:id="@+id/medicine_other_requirement"
          		     android:layout_width="fill_parent"
			         android:layout_height="wrap_content"
			         android:orientation="horizontal"
			         android:paddingRight="5dip" 
      				 android:paddingLeft="100dip"
      				 android:layout_below="@id/blank5"
      				 >
		         <EditText
					 android:layout_width="wrap_content"
					 android:layout_height="wrap_content"
					 android:id="@+id/medicine_other_text"
					 android:autoLink="all"
					 android:hint="@string/medicine_other_text_hint"
					 android:lines="3"
					 android:minLines="1"
					 android:gravity="top|left"
					 android:maxLines="5"
					 android:scrollbars="none"
					 android:inputType="textMultiLine|textCapSentences"
					 android:background="#ffffff"
					 android:layout_below="@id/blank5"
				/>   
		</LinearLayout>
		<TextView
		          android:id="@+id/blank8"
		    	  android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
			      android:paddingEnd="10dip"
				  android:paddingStart="5dip"
				  android:textColor="#a27e2c"
				  android:layout_below="@id/medicine_other_requirement"      
		/>
		<TextView
		          android:id="@+id/blank9"
		    	  android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
			      android:paddingEnd="10dip"
				  android:paddingStart="5dip"
				  android:textColor="#a27e2c"
				  android:layout_below="@id/blank8"      
		/>
		
		<Button
			        android:id="@+id/advance_ok"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/advance_ok"
			        android:layout_below="@id/blank9"
			        android:layout_centerInParent="true"
		/>    
   </RelativeLayout>
</ScrollView>
