<?xml version="1.0" encoding="utf-8"?>

<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="10dip"
      android:paddingRight="10dip" 
      android:paddingTop="10dip"
	  android:background="@drawable/bck"	   > 
	  	  
      			<TextView 
			        android:id="@+id/show_message"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:background="#ffffff"
			        android:text="@string/rcv_message_text_hint"
			        android:maxLines="100"
			        android:lines="15"
			        android:minLines="1"
		            android:gravity="top|left"
			        />"			
      
 				<TextView
			          android:id="@+id/blank3"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:layout_alignParentLeft="true"
			          android:paddingBottom="5dip"
					  android:layout_below="@id/show_message"
			          android:textColor="#a27e2c" 
          		/>     
      
			    <EditText
			                    android:layout_width="fill_parent"
			                    android:layout_height="wrap_content"
			                    android:layout_below="@id/blank3"
			                    android:height="1000sp"
			                    android:id="@+id/message_text"
			                    android:layout_alignParentLeft="true"
			                    android:autoLink="all"
			                    android:hint="@string/message_text_hint"
			                    android:lines="5"
			                    android:minLines="1"
			                    android:gravity="top|left"
			                    android:maxLines="10"
			                    android:scrollbars="none"
			                    android:inputType="textMultiLine|textCapSentences"
			                    android:background="#ffffff"
			                    android:maxLength="100"
			                    />
			   <LinearLayout
			       			android:id="@+id/smiley"
					        android:layout_width="match_parent"
					        android:layout_height="wrap_content"
					        android:orientation="horizontal"
					        android:layout_below="@id/message_text"
					        android:paddingTop="20dip" >
					
					        <ImageView
					            android:id="@+id/imageAmbulance"
					            android:layout_width="fill_parent"
					            android:layout_height="wrap_content"
					            android:layout_gravity="center_horizontal"
					            android:layout_weight="1"
					            android:src="@drawable/ambulance"
					             />
					
					        <ImageView
					            android:id="@+id/imageFood"
					            android:layout_width="fill_parent"
					            android:layout_height="wrap_content"
					            android:layout_gravity="center_horizontal"
					            android:layout_weight="1"
					            android:src="@drawable/food"
					             />
					
					        <ImageView
					            android:id="@+id/imageCloth"
					            android:layout_width="fill_parent"
					            android:layout_height="wrap_content"
					            android:layout_gravity="center_horizontal"
					            android:layout_weight="1"
					            android:src="@drawable/cloth2" />
					
					        <ImageView
					            android:id="@+id/imageMedicine"
					            android:layout_width="fill_parent"
					            android:layout_height="wrap_content"
					            android:layout_gravity="center_horizontal"
					            android:layout_weight="1"
					            android:src="@drawable/medicine" />
					
					        <ImageView
					            android:id="@+id/imageWater"
					            android:layout_width="fill_parent"
					            android:layout_height="wrap_content"
					            android:layout_gravity="center_horizontal"
					            android:layout_weight="1"
					            android:src="@drawable/water" />
					
					        
    		</LinearLayout>
			    
			    
			    
				 <TextView
			          android:id="@+id/blank2"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:layout_below="@id/smiley"
			          android:layout_alignParentLeft="true"
			          android:paddingBottom="5dip"
			          android:textColor="#a27e2c" 
          		/>	
          		<LinearLayout
          		     android:id="@+id/btn_grp"
          		     android:layout_width="fill_parent"
			         android:layout_height="wrap_content"
			         android:orientation="horizontal" 
			         android:layout_below="@id/blank2"
			         android:weightSum="3"
			         android:paddingRight="10dip" 
      				 android:paddingLeft="10dip"
      				 >
      				 	
				          		<Button
							        android:id="@+id/messages"
							        android:layout_width="wrap_content"
							        android:layout_height="wrap_content"
							        android:text="@string/message"
							        android:layout_weight="1"
				         		/>    
				         		<Button
							        android:id="@+id/send"
							        android:layout_width="wrap_content"
							        android:layout_height="wrap_content"
							        android:text="@string/send"
							        android:layout_weight="1"
				         		/>    
				         		<Button
							        android:id="@+id/anvanced"
							        android:layout_width="wrap_content"
							        android:layout_height="wrap_content"
							        android:text="@string/advance"
							        android:layout_weight="1"
				         		/>    
			</LinearLayout>
	</RelativeLayout>
</ScrollView>